# starter_repo

./: Dockerfile  README.md  apt-dependencies.txt  docker-compose.yml  environment  pip-dependencies.txt
workspace/src/gazebo_rotating_lidar_plugin/: CMakeLists.txt  package.xml
workspace/src/gazebo_rotating_lidar_plugin/config/: default.rviz
workspace/src/gazebo_rotating_lidar_plugin/include/gazebo_rotating_lidar_plugin/: gazebo_rotating_lidar_plugin.hpp
workspace/src/gazebo_rotating_lidar_plugin/launch/: full_bringup.launch.py  minimal_bringup.launch.py  plugin_test.launch.py
workspace/src/gazebo_rotating_lidar_plugin/src/: gazebo_rotating_lidar_plugin.cpp  gazebo_rotating_lidar_plugin_original.cpp
workspace/src/gazebo_rotating_lidar_plugin/worlds/: waffle.model
